Added auth handling when enabling region monitoring. StateController observers region enter events. UserJourneyController handles start/stop region monitoring when the journey settings changes. SOme more tests.

--- a/SL One trip search/Info.plist
+++ b/SL One trip search/Info.plist
@@ -56,6 +56,10 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Appen använder din position för att kolla söka efter resor när du närmar dig någon av de angivna stationerna.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Appen använder din position för att kolla söka efter resor när du närmar dig någon av de angivna stationerna.</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
